--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,10 @@
 target 'LabelsApp' do
-  pod 'Artsy+UIFonts'
+  pod 'Artsy+OSSUIFonts'
   pod "Artsy+UILabels", :path => "../"
 end
 
 target 'Tests', :exclusive => true do
-  pod 'Artsy+UIFonts'
+  pod 'Artsy+OSSUIFonts'
   pod "Artsy+UILabels", :path => "../"
 
   pod 'Specta'
