--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: objective-c
-before_install: 
-  - gem install cocoapods --no-ri --no-rdoc -v "0.32.1"
+before_install:
+  - bundle install
 before_script:
   - export LANG=en_US.UTF-8
   - brew update
   - brew uninstall xctool
   - brew install xctool
-install: 
-  - pod repo add artsy https://github.com/artsy/Specs.git
-  - cd Example ; pod install; cd ..
 xcode_workspace: Example/Artsy+UILabels.xcworkspace
 xcode_scheme: LabelsApp
 xcode_sdk: iphonesimulator
-
+podfile: Example/Podfile
