--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,6 @@
+source 'https://github.com/artsy/Specs.git'
+source 'https://github.com/CocoaPods/Specs.git'
+
 target 'LabelsApp' do
   pod 'Artsy+OSSUIFonts'
   pod "Artsy+UILabels", :path => "../"
