--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
   - brew update
   - brew uninstall xctool
   - brew install xctool
-xcode_workspace: Example/Artsy+UILabels.xcworkspace
+install:
+  - cd Example ; pod update; cd ..xcode_workspace: Example/Artsy+UILabels.xcworkspace
 xcode_scheme: LabelsApp
 xcode_sdk: iphonesimulator
-podfile: Example/Podfile
