--- a/Example/Podfile
+++ b/Example/Podfile
@@ -12,6 +12,6 @@ target 'Tests', :exclusive => true do
 
   pod 'Specta'
   pod 'Expecta'
-  pod 'FBSnapshotTestCase'
+  pod 'FBSnapshotTestCase', '~> 1.8'
   pod 'Expecta+Snapshots'
 end
