--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: objective-c
-before_install:
-  - bundle install
+rvm: 2
 before_script:
   - export LANG=en_US.UTF-8
-  - brew update
-  - brew uninstall xctool
-  - brew install xctool
-xcode_workspace: Example/Artsy+UILabels.xcworkspace
-xcode_scheme: LabelsApp
-xcode_sdk: iphonesimulator
-podfile: Example/Podfile
+  - bundle install
+  - bundle exec pod repo add artsy https://github.com/artsy/Specs.git
+  - cd Example
+  - bundle exec pod install
+
+script:
+  - xcodebuild -workspace Artsy+UILabels.xcworkspace -scheme LabelsApp -sdk iphonesimulator -destination 'name=iPhone 6' build test | xcpretty -c && exit ${PIPESTATUS[0]}
