--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,8 @@
 source 'https://github.com/artsy/Specs.git'
 source 'https://github.com/CocoaPods/Specs.git'
 
+platform :ios, '9.0'
+
 target 'LabelsApp' do
   pod 'Artsy+UIFonts', :git => "https://github.com/artsy/Artsy-OSSUIFonts.git"
 
@@ -16,4 +18,12 @@ target 'Tests' do
   pod 'Expecta'
   pod 'FBSnapshotTestCase', '~> 1.8'
   pod 'Expecta+Snapshots'
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+    end
+  end
 end
